--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "node": ">=14"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.6.13"
+    "@types/node": "^24.10.1",
+    "@types/node-fetch": "^2.6.13",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
