--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Local UI app that pulls ECFR agencies JSON and stores it with lowdb",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+  "test:intg": "mocha -r ts-node/register \"tst/fetchTitleChapterCountsIntgTest.ts\" --timeout 20000"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,6 +19,10 @@
     "@types/node": "^24.10.1",
     "@types/node-fetch": "^2.6.13",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "mocha": "^10.2.0",
+    "chai": "^4.3.8",
+    "@types/mocha": "^10.0.1",
+    "@types/chai": "^4.3.4"
   }
 }
